--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,9 +74,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-      - family: GreatVibes
+      - family: Dongle-Bold
         fonts:
-          - asset: fonts/GreatVibes-Regular.ttf
+          - asset: fonts/Dongle-Bold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
