changes : change bmi calculator page and buttons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
     - assets/back-2.png
     - assets/bmi.png
     - assets/bmi-2.png
+    - assets/back-blue.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
